comment modify info

--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -173,6 +173,7 @@ interchanging minimum with list[i]
 	\item\textbf{macro}: swap(x,y,t)
 \end{itemize}
 
+%add additional explanation -kimsongsub 2021.01.27-
 \begin{itemize}
 	\item The function's code is easier to read than that of the macro but the macro works with any data type
 \end{itemize}
@@ -182,6 +183,7 @@ interchanging minimum with list[i]
 \begin{frame}[t,fragile]
 \frametitle{Algorithm Specification: Selection Sort}
 
+%add function, macro code -kimsongsub 2021.01.28-
 \begin{itemize}
 \item\textbf{function}: swap($\&$a,$\&$b)
 \end{itemize}
@@ -229,6 +231,7 @@ denote left and right
 let middle=(left+right)/2 middle position in the list
 
 compare list[middle] with the searchnum and adjust left or right
+%add Binary Search table -kimsongsub 2021.01.28-
 	\begin{center}
 	\begin{tabular}{ l | l | l | l | l | l | l | l | l | l |}
 	\hline
@@ -253,6 +256,7 @@ compare list[middle] with searchnum
 \item searchnum = list[middle] return middle 
 \item searchnum > list[middle] set left to middle+1
 \end{enumerate}
+%add Binary Search table -kimsongsub 2021.01.28-
 \begin{center}
 	\begin{tabular}{ l | l | l | l | l | l | l | l | l | l |}
 		\hline
@@ -273,6 +277,7 @@ compare list[middle] with searchnum
 		\item recalculate middle and continue search
 		\item determining if there are any elements left to check
 	\end{itemize}
+%add Binary Search table -kimsongsub 2021.01.28-
 \begin{center}
 	\begin{tabular}{ l | l | l | l | l | l | l | l | l | l |}
 		\hline
@@ -286,6 +291,7 @@ compare list[middle] with searchnum
 		\item handling the comparison (through a function or a macro)
 	\end{itemize}
 
+%add Binary Search table -kimsongsub 2021.01.28-
 	\begin{center}
 		\begin{tabular}{ l | l | l | l | l | l | l | l | l | l |}
 			\hline
@@ -299,6 +305,7 @@ compare list[middle] with searchnum
 \begin{frame}[t, fragile]
   \frametitle{Algorithm Specification: Binary Search}
 
+%add compare function and macro code -kimsongsub 2021.01.28-
 \begin{itemize}
 	\item\textbf {function:} compare(int x, int y)
 \end{itemize}
