typo revised  -kimsongsub 2021.01.29-

--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -37,7 +37,7 @@
 
 
 %---------------------------------------------------------
-\section{Miscellenea} 
+\section{Miscellanea} %typo revised  -kimsongsub 2021.01.29-
 
 
 
@@ -112,7 +112,7 @@ Verification
 \item \textbf{correctness proofs}: select algorithms that have been proven correct
 \item \textbf{testing}: working code and sets of test data
 \item \textbf{error removal}: If done properly, the correctness proofs
-  and system test indicate erroneous coed
+  and system test indicate erroneous code
 \end{itemize}
 \end{frame}
 
@@ -649,8 +649,8 @@ float sum(float list[], int n) {
 }
 \end{codedef}
 \begin{itemize}
-\item output - a simple variable
 \item input - an array variable
+\item output - a simple variable
 \end{itemize}
 \end{frame}
 
