--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -21,7 +21,7 @@
 
 \setbeamertemplate{blocks}[rounded]
 
-\title{Dasta Structure and Algorithm}
+\title{Data Structure and Algorithm}
 \subtitle{Class 1}
 \author[SJL]{Seongjin Lee}
 \institute{\href{mailto:insight@gnu.ac.kr}{insight@gnu.ac.kr}\\\url{http://resourceful.github.io}\\Systems Research Lab.\\GNU}
@@ -37,7 +37,7 @@
 
 
 %---------------------------------------------------------
-\section{Miscellanea} %typo revised  -kimsongsub 2021.01.29-
+\section{Miscellanea} %typo revised  -2021.01.29 kimsongsub-
 
 
 
@@ -172,7 +172,7 @@ interchanging minimum with list[i]
 \begin{itemize}
 	\item\textbf{macro}: swap(x,y,t)
 \end{itemize}
-%add additional explanation -kimsongsub 2021.01.27-
+%add additional explanation -2021.01.27 kimsongsub-
 \begin{itemize}
 	\item The function's code is easier to read than that of the macro but the macro works with any data type
 \end{itemize}
@@ -180,7 +180,7 @@ interchanging minimum with list[i]
 
 \begin{frame}[t,fragile]
 \frametitle{Algorithm Specification: Selection Sort}
-%add function, macro code -kimsongsub 2021.01.28-
+%add function, macro code -2021.01.28 kimsongsub-
 \begin{itemize}
 \item\textbf{function}: swap($\&$a,$\&$b)
 \end{itemize}
@@ -228,7 +228,7 @@ denote left and right
 let middle=(left+right)/2 middle position in the list
 
 compare list[middle] with the searchnum and adjust left or right
-%add Binary Search table -kimsongsub 2021.01.28-
+%add Binary Search table -2021.01.28 kimsongsub-
 	\begin{center}
 	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
 	\hline
@@ -253,7 +253,7 @@ compare list[middle] with searchnum
 \item searchnum = list[middle] return middle 
 \item searchnum > list[middle] set left to middle+1
 \end{enumerate}
-%add Binary Search table -kimsongsub 2021.01.28-
+%add Binary Search table -2021.01.28 kimsongsub-
 \begin{center}
 	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
 		\hline
@@ -274,7 +274,7 @@ compare list[middle] with searchnum
 		\item recalculate middle and continue search
 		\item determining if there are any elements left to check
 	\end{itemize}
-%add Binary Search table -kimsongsub 2021.01.28-
+%add Binary Search table -2021.01.28 kimsongsub-
 \begin{center}
 	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
 		\hline
@@ -287,7 +287,7 @@ compare list[middle] with searchnum
 	\begin{itemize}
 		\item handling the comparison (through a function or a macro)
 	\end{itemize}
-%add Binary Search table -kimsongsub 2021.01.28-
+%add Binary Search table -2021.01.28 kimsongsub-
 	\begin{center}
 		\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
 			\hline
@@ -300,7 +300,7 @@ compare list[middle] with searchnum
 \end{frame}
 \begin{frame}[t, fragile]
   \frametitle{Algorithm Specification: Binary Search}
-%add compare function and macro code -kimsongsub 2021.01.28-
+%add compare function and macro code -2021.01.28 kimsongsub-
 \begin{itemize}
 	\item\textbf {function:} compare(int x, int y)
 \end{itemize}
@@ -499,7 +499,7 @@ definition
 
 
 \end{frame}
-%separate page and add additional explanation -kimsongsub 2021.01.29-
+%separate page and add additional explanation -2021.01.29 kimsongsub-
 \begin{frame}[t]
   \frametitle{Data Abstraction}
 specification
@@ -692,11 +692,12 @@ space needed for one recursive call
 \begin{itemize}
 \item number of bytes required for the two parameters and the return
   address
-\item 6 bytes needed on 80386
+% byte revised -2021.01.30 kimsongsub-
+\item 12 bytes needed on 80386
   \begin{itemize}
-  \item 2 bytes for pointer list[]
-  \item 2 bytes for integer n
-  \item 2 bytes for return address
+  \item 4 bytes for pointer list[]
+  \item 4 bytes for integer n
+  \item 4 bytes for return address
   \end{itemize}
 
 \end{itemize}
@@ -705,7 +706,7 @@ space needed for one recursive call
 
 \textbf{total variable space Srsum(MAX\_SIZE)}
 \begin{itemize}
-\item Srsum(MAX\_SIZE) = 6 * MAX\_SIZE
+\item Srsum(MAX\_SIZE) = 12 * MAX\_SIZE
 \end{itemize}
 
 \end{frame}
@@ -971,7 +972,7 @@ Big ``OH''
 \item \textbf{def} f(n) = O(g(n))
   \begin{itemize}
   \item iff there exist positive constants c and n0 such that
-  \item f(n) $\geq$ c$\cdot$g(n) for all n, n $\geq$ n0
+  \item f(n) $\leq$ c$\cdot$g(n) for all n, n $\geq$ n0(n0 is the break even point)
   \end{itemize}
 \end{itemize}
   \begin{figure}[h]
@@ -993,7 +994,8 @@ Big ``OH''
     \includegraphics[width=0.5\textwidth]{figures/fig06_accel.png}
     \caption{Which one is faster?}
   \end{figure}
-$ |25\cdot n|   1\cdot|n^2/3| for all n \geq  75$
+%revised text -2021.01.31 kimsongsub-
+$ |25\cdot n|  \leq 1\cdot|n^2/3|$ for all n$ \geq  75$
 \end{frame}
 
 \begin{frame}[t]
@@ -1008,7 +1010,7 @@ f(n) = O(g(n))
   \end{itemize}
 
 \item g(n) should be as small a function
-  of n as one can come up with for which f(n)= O(g(n))
+  of n as one can come up with for which f(n) = O(g(n))
 \end{itemize}
 
 f(n) = O(g(n)) $\neq$  O(g(n)) = f(n)
