--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -255,11 +255,13 @@ compare list[middle] with searchnum
 \end{enumerate}
 %add Binary Search table -2021.01.28 kimsongsub-
 \begin{center}
-	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
+	\begin{tabular}{| l || c | c | c | c | c | c | c | c | c |}
 		\hline
 		value & 1 & 5 & 7 & 8 & 13 & \cellcolor{green}19 & 20 & 23 & \cellcolor{red}29 \\
 		\hline
 		index & 0 & 1 & 2 & 3 & 4 & \cellcolor{green}5 & 6 & 7 & \cellcolor{red}8 \\
+		\hline
+		variable & & & & & & left & & & right \\
 		\hline
 	\end{tabular}
 \end{center}
@@ -276,11 +278,13 @@ compare list[middle] with searchnum
 	\end{itemize}
 %add Binary Search table -2021.01.28 kimsongsub-
 \begin{center}
-	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
+	\begin{tabular}{| l || c | c | c | c | c | c | c | c | c |}
 		\hline
 		value & 1 & 5 & 7 & 8 & 13 & \cellcolor{green}19 & \cellcolor{yellow}20 & 23 & \cellcolor{red}29 \\
 		\hline
 		index & 0 & 1 & 2 & 3 & 4 & \cellcolor{green}5 & \cellcolor{yellow}6 & 7 & \cellcolor{red}8 \\
+		\hline
+		variable & & & & & & left & middle & & right \\
 		\hline
 	\end{tabular}
 \end{center}
@@ -289,11 +293,13 @@ compare list[middle] with searchnum
 	\end{itemize}
 %add Binary Search table -2021.01.28 kimsongsub-
 	\begin{center}
-		\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
+		\begin{tabular}{| l || c | c | c | c | c | c | c | c | c |}
 			\hline
 			value & 1 & 5 & 7 & 8 & 13 & 19 & 20 & \cellcolor{green}23 & \cellcolor{red}29 \\
 			\hline
 			index & 0 & 1 & 2 & 3 & 4 & 5 & 6 & \cellcolor{green}7 & \cellcolor{red}8 \\
+			\hline
+			variable & & & & & & & & left & right \\
 			\hline
 		\end{tabular}
 	\end{center}
