--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -440,32 +440,26 @@ if look at the set {a,b,c,d}, the set of permutations are
   \frametitle{Recursive Algorithms: Permutations}
 \begin{codedef}
 void perm(char *list,int i,int n) {
-   int j,temp;
-   if(i==n) {
-      for(j=0;j<=n;j++)
-      printf(“%c”, list[j]);
-      printf(“     “);
-   }
-   else {
-      for(j=i;j<=n;j++) {
-         SWAP(list[i],list[j],temp);
-         perm(list,i+1,n);
-         SWAP(list[i],list[j],temp);
-       }
-   }  
+	int j,temp;
+	if(i==n) {
+		for(j=0;j<=n;j++)
+		printf(“%c”, list[j]);
+		printf(“     “);
+	}
+	else {
+		for(j=i;j<=n;j++) {
+			SWAP(list[i],list[j],temp);
+			perm(list,i+1,n);
+			SWAP(list[i],list[j],temp);
+		}
+	}  
 }  
+% form revised -2021.02.01 kimsongsub-
 \end{codedef}
-
-initial function call is
-\begin{itemize}
-\item perm(list,0,n-1);
-\end{itemize}
-
-recursively generates permutations
-\begin{itemize}
-\item until i=n
-\end{itemize}
-
+ 	initial function call is \textbf{perm(list,0,n-1);}
+ 	
+ 	recursively generates permutations \textbf{until i=n}
+ 	
 \end{frame}
 
 \section{Data Abstraction}
