--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -230,11 +230,13 @@ let middle=(left+right)/2 middle position in the list
 compare list[middle] with the searchnum and adjust left or right
 %add Binary Search table -2021.01.28 kimsongsub-
 	\begin{center}
-	\begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
+	\begin{tabular}{| l || c | c | c | c | c | c | c | c | c |}
 	\hline
 	value & \cellcolor{green}1 & 5 & 7 & 8 & \cellcolor{yellow}13 & 19 & 20 & 23 & \cellcolor{red}29 \\
 	\hline
 	index & \cellcolor{green}0 & 1 & 2 & 3 & \cellcolor{yellow}4 & 5 & 6 & 7 & \cellcolor{red}8 \\
+	\hline
+	variable & left & & & & middle & & & & right \\
 	\hline
 	\end{tabular}
 	\end{center}
