change function name

--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -623,7 +623,7 @@ total space requirement $S(Program)$
 \begin{frame}[t, fragile]
   \frametitle{Performance Analysis: Space Complexity}
 \begin{codedef}
-float abc(float a, float b, float c) { 
+float calculation(float a, float b, float c) { 
    return a+b+b*c+(a+b-c)/(a+b)+4.00;
 }    
 \end{codedef}
@@ -632,7 +632,7 @@ float abc(float a, float b, float c) {
 \item input - three simple variables
 \item ouput - a simple variable
 \item There is no variable space requirement, fixed space requirements only
-\item Sabc(I) = 0
+\item $S_{calculation}$(I) = 0
 \end{itemize}
 
 \end{frame}
