--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -1009,7 +1009,7 @@ Big ``OH''
  %add addional description -2021.01.31 kimsongsub-
 \begin{itemize}
 \item 25$\cdot$n = O(n$^2$/3) if let c = 1
-\item 'f of n' is 'big-oh of g og n'
+\item 'f of n' is 'big-oh of g of n'
 \end{itemize}
 
   \begin{figure}[h]
