--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -774,9 +774,9 @@ float sum(float list[], int n) {
 % add additional code -2021.01.30 kimsongsub-
 for one time execution \textbf{sum} function
 \begin{itemize}
-\item count+=2 in for loop n time : 2n
-\item count+=3 : 3
-\item total 2n+3 steps
+\item \texttt{count += 2} in for loop n time : $2n$
+\item \texttt{count += 3} : 3
+\item \textbf{total $2n+3$ steps}
 \end{itemize}
 \end{frame}
 
@@ -964,7 +964,7 @@ Matrix addition
 \end{enumerate}
 %add addional explanaion -2021.01.31 kimsongsub-
 \begin{itemize}
-	\item The "worst case" means case that has maxium number of steps 
+	\item The ``worst case'' means case that has maxium number of steps 
 \end{itemize}
 
 \end{frame}
