--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -702,7 +702,7 @@ space needed for one recursive call
 \item number of bytes required for the two parameters and the return
   address
 % byte revised -2021.01.30 kimsongsub-
-\item 12 bytes needed on 80386
+\item 12 bytes needed on Intel-i7 (depends on the architecture)
   \begin{itemize}
   \item 4 bytes for pointer list[]
   \item 4 bytes for integer n
