--- a/DSA03-Array/DSA_2017_03.tex
+++ b/DSA03-Array/DSA_2017_03.tex
@@ -1,7 +1,7 @@
 % Author: Seongjin Lee 
 % Gyeongsang National University, Korea 
 % 
-% 2017-03-06
+% 2021-02-07
 %
 
 \documentclass[newPxFont,sthlmFooter,nooffset]{beamer}
@@ -25,7 +25,8 @@
 \subtitle{Class 3}
 \author[SJL]{Seongjin Lee}
 \institute{\href{mailto:insight@gnu.ac.kr}{insight@gnu.ac.kr}\\\url{http://resourceful.github.io}\\Systems Research Lab.\\GNU}
-\date{2017-03-06} 
+%date update -2021.02.02 kimsongsub-
+\date{2021-02-07} 
 
 \begin{document}
 
