--- a/DSA03-Array/DSA_2017_03.tex
+++ b/DSA03-Array/DSA_2017_03.tex
@@ -85,7 +85,16 @@ int list[5];
 \begin{codedefnb}
 list = &list[0]
 \end{codedefnb}
-
+%add table -2021.02.03 kimsongsub-
+\begin{center}
+	\begin{tabular}{| c | c | c | c | c |}
+		\hline
+		\texttt{list[0]} & \texttt{list[1]} & \texttt{list[2]} & \texttt{list[3]} & \texttt{list[4]} \\
+		\hline
+		 trash value & trash value & trash value & trash value & trash value \\
+		\hline
+	\end{tabular}
+\end{center}
 \end{frame}
 
 
@@ -100,6 +109,10 @@ list = &list[0]
 \texttt{\&list[3]} & $\alpha + 3 \cdot$ \texttt{sizeof(int)}\\
 \texttt{\&list[4]} & $\alpha + 4 \cdot$ \texttt{sizeof(int)}\\
   \end{tabular}
+%add additional explanation -2021.02.06 kimsongsub-
+\begin{itemize}
+	\item Because different architectures have different int sizes, we have to use ``sizeof''
+\end{itemize}
 
 \bigskip
 \texttt{\&list[i]} in a C programs
@@ -120,10 +133,30 @@ int *list2[5];       // list2 : pointer constant to an int,
                      // and five memory locations for holding 
                      // integers are reserved
 \end{codedef}
-
+%add example code -2021.02.06 kimsongsub-
+\begin{codedef}
+int list[] = { 0,1,2,3,4,5 };
+	
+printf("%d\n", list[3]);    // 3
+printf("%d\n", *(&list[0]+3));    // 3
+printf("%d\n", *(list+3));    // 3 ...All is the same expression
+\end{codedef}
 \texttt{(list2+i)} equals \texttt{\&list2[i]}, and \texttt{*(list2+i)} equals \texttt{list2[i]}
 \begin{itemize}
 \item regardless of the type of the array list2
+\end{itemize}
+\end{frame}
+%add Page, example -2021.02.07 kimsongsub-
+\begin{frame}[t, fragile]
+	\frametitle{Array}
+How about this ?
+\begin{codedef}
+printf("%d\n", ++list[0]);
+\end{codedef}
+
+\begin{itemize}
+	\item \texttt{++list[0] -> list[0]+1}
+	\item the result is same as \texttt{list[1]}
 \end{itemize}
 \end{frame}
 
@@ -164,9 +197,6 @@ float sum(float list[], int n) {
 
 
 
-
-
-
 \begin{frame}[t, fragile]
   \frametitle{Recap: On Pointer}
 Pointer Variable stores address
@@ -188,6 +218,15 @@ Pointer Variable stores address
 int *ptr;
 *ptr = 100;
 \end{codedef}
+%add addional explanation -2021.02.07 kimsongsub-
+It is better to handle NULL for the pointer that do not refer to address right away
+\end{itemize}
+\end{frame}
+
+\begin{frame}[t, fragile]
+\frametitle{Recap: On Pointer}
+Do Not!
+\begin{itemize}
 \item the data type must equal
 \begin{codedef}
 double Pi = 3.14;
@@ -200,7 +239,6 @@ int num;
 \end{codedef}
 \end{itemize}
 \end{frame}
-
 
 \begin{frame}[t, fragile]
   \frametitle{Recap: On Pointer}
@@ -218,14 +256,25 @@ See the example
 #include <stdlib.h>
 
 void *malloc(size_t size); // allocates size bytes of memory and returns a pointer to the allocated memory
+
 void *free(void *ptr); // frees allocation that were created via the preceding allocation function
-void *calloc(size_t count, size_t size); // contiguously allocates enough sapce for count objects that are size bytes of memory each and returns a pointer to the allocated memory. The allocated memory is filled with bytes of value zero.
+
+void *calloc(size_t count, size_t size); // contiguously allocates enough space for count objects that are size bytes of memory each and returns a pointer to the allocated memory. The allocated memory is filled with bytes of value zero.
+
 void *realloc(void *ptr, size_t size); // change the size of the allocation pointed to by ptr to size, and returns ptr
 \end{codedef}
 
 \end{frame}
+%add free explanation page -2021.02.07 kimsongsub-
+\begin{frame}
+	\frametitle{Recap: On Pointer}
+if the memory is not freed after being allocated, a memory leak will occur
 
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.33\textwidth]{figures/fig03_memory.png}
+\end{figure}
+\end{frame}
 
 
 \begin{frame}[t, fragile]
@@ -318,7 +367,8 @@ creating a variable
 
 \begin{frame}[t, fragile]
   \frametitle{Structures and Unions: struct}
-use of the . as the structure member operator
+% add additional descript -2021.02.05 kimsongsub-
+use of the .(period) as the structure member operator
 
 \begin{codedef}
 strcpy(person.name, "james");
@@ -442,7 +492,9 @@ typedef struct human_being {
 \begin{frame}[t, fragile]
   \frametitle{Structures and Unions: Embedding Structure}
 Ex. A person boar on Feb 14 1992
+% add declare person1 -2021.02.05 kimsongsub-
 \begin{codedef}
+human_begin person1;
 person1.dob.month = 2;
 person1.dob.day = 14;
 person1.dob.year = 1992;
@@ -496,6 +548,55 @@ and
 person2.sex_info.sex = female; 
 person2.sex_info.u.children = 4;
 \end{codedef}
+\end{frame}
+% add structures and unions quiz page-2021.02.07 kimsongsub-
+\begin{frame}[t, fragile]
+	\frametitle{Structures and Unions: {\large Differences between structure and union}}
+What are differences between structure and union ? 
+\begin{itemize}
+	\item Structure
+\end{itemize}
+\begin{codedef}
+typedef struct example{
+	int x, y;
+	double d;
+}struct_example;
+
+struct_example se;
+
+printf("%d\n", sizeof(se));
+printf("%p %p %p\n", &se.x, &se.y, &se.d);
+\end{codedef}
+
+>> 16
+\newline>> 0x7ff0 0x7ff4 0x7ff8
+\begin{itemize}
+	\item 16byte size, different address
+\end{itemize}
+\end{frame}
+
+\begin{frame}[t, fragile]
+	\frametitle{Structures and Unions: {\large Differences between structure and union}}
+\begin{itemize}
+	\item Union
+\end{itemize}
+\begin{codedef}
+	typedef union example{
+		int x, y;
+		double d;
+	}union_example;
+
+	union_example ue;
+	
+	printf("%d\n", sizeof(ue));
+	printf("%p %p %p\n", &ue.x, &ue.y, &ue.d);
+\end{codedef}
+
+>> 8
+\newline>> 0x7ff0 0x7ff0 0x7ff0 
+\begin{itemize}
+	\item 8byte size, same address
+\end{itemize}
 \end{frame}
 
 \begin{frame}[t, fragile]
