--- a/DSA05-SQ/DSA_2017_05.tex
+++ b/DSA05-SQ/DSA_2017_05.tex
@@ -5,7 +5,7 @@
 %
 
 \documentclass[newPxFont,sthlmFooter,nooffset]{beamer}
-\usepackage{kotex}
+\usepackage{kotex, multicol}
 %\usetheme{sthlm}
 \usepackage{../style/beamerthemesthlm}
 \hypersetup{pdfauthor={Seongjin Lee (insight@gnu.ac.kr)},
@@ -96,7 +96,7 @@ Activation record (stack frame) initially contains only
 \item a return address
 \end{itemize}
 If this invokes another function
-\begin{itemize}
+\begin{itemize}  
 \item local variables
 \item parameters of the invoking function
 \end{itemize}
@@ -120,6 +120,21 @@ System Stack after function call
       \includegraphics[width=0.4\textwidth]{figures/fig03_stack2.png} \\
     \end{tabular}
   \end{center}
+
+\end{frame}
+%add page -2021.02.13 kimsongsub-
+\begin{frame}[t]
+	\frametitle{Stack Abstract Data Type: System Stack}
+	Frequent function calls may occupy all of the stack memory and may cause a stack overflow.
+	\begin{center}
+			\includegraphics[width=0.4\textwidth]{figures/stackoverflow.png}
+	\end{center}
+%add source - 8p KSS-
+\begin{tiny}
+	\begin{flushright}
+		The source of the picture is the ``Stack Overflow'' company's logo.
+	\end{flushright}
+\end{tiny}
 
 \end{frame}
 
@@ -207,13 +222,14 @@ element pop(int *ptop){
 
 \end{frame}
 
-
+%add example -2021.02.13 kimsongsub-
 \begin{frame}[t]
   \frametitle{Stack Abstract Data Type: Application of Stack}
   \begin{itemize}
   \item Procedure calls/returns
   \item Syntactic analyzer
-  \item converting recursive procedures to non-recursive procedures
+  \item Converting non-recursive procedures to recursive procedures
+  \item Save return address when calling subfunction
   \end{itemize}
 \end{frame}
 
@@ -290,7 +306,15 @@ return (front == rear)
 return rear == (MAX_QUEUE_SIZE-1)
 \end{codedef}
 
+\end{frame}
 
+%add example -2021.02.13 kimsongsub-
+\begin{frame}[t]
+	\frametitle{Queue Abstract Data Type: Application of Queue}
+	\begin{itemize}
+		\item Buffer
+		\item Job scheduling
+	\end{itemize}
 \end{frame}
 
 \begin{frame}[t, fragile]
@@ -374,6 +398,30 @@ empty and nonempty circular queues
   \frametitle{Circular Queues}
 full circular queues
 \includegraphics[width=0.9\textwidth]{figures/fig05_fcq.png}
+\end{frame}
+
+%add quiz -2021.02.13 kimsongsub-
+\begin{frame}[t]
+	\frametitle{Circular Queues: Quiz}
+What is the result ?
+	\includegraphics[width=0.9\textwidth]{figures/fig05_quiz1.png}
+\end{frame}
+%add quiz result -27p KSS-
+\begin{frame}[t]
+	\frametitle{Circular Queues: Quiz Result}
+	\includegraphics[width=0.9\textwidth]{figures/fig05_quiz2.png}
+\end{frame}
+
+%add quiz -2021.02.13 kimsongsub-
+\begin{frame}[t, fragile]
+	\frametitle{Circular Queues: Thinking}
+	Why do not fill data in the empty space in front?
+
+\begin{itemize}
+	\item If all the data is filled in such a state, front and rear become the same, so it is impossible to distinguish whether it is empty or full.
+	\item So, before all queue is filled, the size of the queue must be expanded.
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}[t, fragile]
@@ -691,7 +739,6 @@ Evaluation of postfix expression
   \end{center}
 
 \end{frame}
-
 
 \begin{frame}[t]
   \frametitle{Evaluating Postfix Expression}
